- xcode2: fixed <cxxflags> and <cppflags> for C++ files (Scott Bailey, #194)
- xcode2: fixed <library> handling (Scott Bailey, #199)
- added <depends-on-file> to all formats, with warnings if it's not
  implemented (#190)
- mingw, gnu: avoid "No rule to make target ..." errors in generated makefiles
  when dependency header is removed (#201)


Version 0.2.3
--------------

- removed support for C++ Builder X, it no longer exists and the format
  wasn't used by anyone in practice
- significantly improved Xcode format (Kevin Ollivier)
- fixed running bakefile_gen if the name of temporary directory contains spaces
- msvc6prj: use /pdb linker option to make the projects work when imported
  in MSVC7.1 (Scott Bailey, patch #1732354)
- msvs2005prj: added support for Pocket PC platform
- added support for MSVS2003 project files (based on patch by
  Aleksander Jaromin)
- Bakefile now generates files with output format's platform's default
  line endings; added --eol option to override this (based on patch by
  Francesco Montorsi)
- added envvar() convenience function for referencing environment variables
- added --wrap-output command line option for tweaking line-wrapping
  behavior (based on patch by Francesco Montorsi)
- bakefile_gen uses all available CPUs by default now; use explicit -j1
  flag to get the old behavior
- autoconf: fixed shared libraries sonames on NetBSD and OpenBSD
- added limited support for conditional variables dependent on other
  conditional variables based by Francesco Montorsi (previously, only
  dependency on options was possible)
- added "debug" level to the <echo> command
- deprecated <echo level="warning"> in favor of new <warning> command
- added XML Schema for FORMATS.bkmanifest and Bakefiles.bkgen files
- autoconf: check if install -d works (patch by Warren Young)
- dmars: always use -HP99 switch; made the value configurable (#160)
- autoconf: fixed warning about datarootdir variable with autoconf-2.61+